# SmallPT

./: CMakeLists.txt
src/: main.cpp  main_amiga.cpp  main_qt.cpp  smallpt.cpp  smallpt.h
